--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
     .result-button:hover {
       background-color: #e0e0e0;
     }
+    p.subtitle {
+      color: gray;
+      font-size: 0.9em;
+      margin-top: -5px;
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 <body>
   <h2>הקלד ובחר את שם התושב</h2>
+  <p class="subtitle">(מיקום המגורים בפועל)</p>
   <input type="text" id="searchInput" placeholder="הקלד שם לחיפוש...">
   <div id="resultsList"></div>
 
