--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <h2>הקלד ובחר את שם התושב</h2>
-  <p class="subtitle">(מיקום המגורים בפועל)</p>
+  <p class="subtitle">(מיקום יופיע לפי המגורים בפועל)</p>
   <input type="text" id="searchInput" placeholder="הקלד שם לחיפוש...">
   <div id="resultsList"></div>
 
